--- a/ClashConfigBase.yaml
+++ b/ClashConfigBase.yaml
@@ -164,6 +164,12 @@ proxy-groups:
     type: select
     include-all: true
 
+  - name: "Games"
+    type: select
+    proxies: [DIRECT,Proxy,URL-Test,Fallback,HK,TW,JP,SG,US,High Multiplier,All]
+    include-all: true
+    exclude-filter: "倍率:(\\d{2,}|[5-9])|(\\d{2,}|[5-9])x|官网|流量|套餐|订阅|机场"
+
   - name: "Play Store"
     type: select
     proxies: [Proxy,URL-Test,Fallback,DIRECT,HK,TW,JP,SG,US,High Multiplier,All]
@@ -202,6 +208,7 @@ rules:
   - DOMAIN-SUFFIX,firebase.io,Analysis
   - DOMAIN-SUFFIX,crashlytics.com,Analysis
 
+  - GEOSITE,category-games@cn,Games
   - DOMAIN-SUFFIX,googleapis.cn,Play Store
   - GEOSITE,microsoft,Microsoft
   - GEOSITE,tiktok,TikTok
